HelloWorld/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  nginx: nginx
spec:
  selector:
    app: nginx
  ports:
    port: 8080
    targetPort: 80
