HelloWorld/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    http.port: 9001
spec:
  backend:
    serviceName: nginx
    servicePort: 80
